--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-webcam": "^3.0.0",
+    "canvas": "^3.1.0",
+    "encoding": "^0.1.13",
+    "ethers": "^6.14.3",
+    "face-api.js": "^0.22.2",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "typescript": "^5",
